# fastapi_api_yamdb

./: README.md  alembic.ini  docker-compose-local.yaml  pyproject.toml
api/: main.py  settings.py
api/jwt_auth/: README.md  jwt-private.pem  jwt-public.pem  utils.py
api/models/: user_model.py
api/routers/: auth_router.py
api/schemas/: user_schemas.py
migrations/: env.py
migrations/versions/: 0cf8d20959ac_initial.py
